# JSONBus

./: .gitignore  CMakeLists.txt  README.md
container/: CMakeLists.txt  container.cpp  container.h  main.cpp
core/: CMakeLists.txt  abstractcoreapplication.cpp  abstractcoreapplication.h  application.h  argsparser.cpp  argsparser.h  cliarguments.cpp  cliarguments.h  common.h  exception.h  jsonparser.cpp  jsonparser.h  jsonparserrunnable.cpp  jsonparserrunnable.h  jsonparsertask.cpp  jsonparsertask.h  jsonserializer.cpp  jsonserializer.h  plugin.cpp  plugin.h  service.cpp  service.h  settings.cpp  settings.h  sharedlib.cpp  sharedlib.h  slaveapplication.cpp  slaveapplication.h
core/argsparser/: CMakeLists.txt  driver.cpp  driver.h  globals.h  parser.cpp  parser.y  routines.h  scanner.cpp  scanner.h  scanner.l
core/jsonparser/: CMakeLists.txt  abstractstreambuf.cpp  abstractstreambuf.h  descriptorbuf.cpp  descriptorbuf.h  driver.cpp  driver.h  exception.h  globals.h  iodevicebuf.cpp  iodevicebuf.h  multifile_istreambuf.cpp  multifile_istreambuf.h  parser.cpp  parser.y  routines.h  scanner.cpp  scanner.l  stdstreambuf.cpp  stdstreambuf.h  textstreambuf.cpp  textstreambuf.h
core/jsonserializer/: CMakeLists.txt  serializer.cpp  serializer.h
jsonbus/: CMakeLists.txt  shareddata.h
jsonbus/bundles/: CMakeLists.txt
jsonbus/bundles/helloworld/: .echo.cpp.kate-swp  CMakeLists.txt  helloimpl.cpp  helloimpl.h  helloworld.cpp  helloworld.h  helloworldservice.h  helloworldserviceimpl.cpp  helloworldserviceimpl.h  manifest.cpp
jsonbus/container/: CMakeLists.txt  container.cpp  container.h
jsonbus/core/: CMakeLists.txt  abstractchannel.cpp  abstractchannel.h  application.cpp  application.h  bundle.cpp  bundle.h  bundleactivator.cpp  bundleactivator.h  bundlecontext.cpp  bundlecontext.h  bundlemanifest.h  channel.cpp  channel.h  cliarguments.cpp  cliarguments.h  common.h  exception.cpp  exception.h  global.h  iochannel.cpp  iochannel.h  jsonparser.cpp  jsonparser.h  jsonparsertask.cpp  jsonparsertask.h  jsonserializer.cpp  jsonserializer.h  logger.cpp  logger.h  manifest.h  plugin.h  selectablechannel.cpp  selectablechannel.h  selectionkey.cpp  selectionkey.h  selector.cpp  selector.h  serversocketchannel.cpp  serversocketchannel.h  (+25 more)
jsonbus/core/jsonparser/: CMakeLists.txt  abstractstreambuf.cpp  abstractstreambuf.h  descriptorbuf.cpp  descriptorbuf.h  driver.cpp  driver.h  exception.h  globals.h  iodevicebuf.cpp  iodevicebuf.h  parser.cpp  parser.y  routines.h  scanner.cpp  scanner.h  scanner.l  stdstreambuf.h  textstreambuf.cpp  textstreambuf.h
jsonbus/master/: CMakeLists.txt  bundlemanager.cpp  bundlemanager.h  master.cpp  master.h
jsonbus/osgi/: CMakeLists.txt  bundle.cpp  bundle.h  bundleactivator.cpp  bundleactivator.h  bundlecontext.cpp  bundlecontext.h  bundlemanifest.h
jsonbus/router/: CMakeLists.txt  router.cpp  router.h
jsonbus/service/: CMakeLists.txt
jsonbus/service/hello/: CMakeLists.txt  hello.h
jsonbus/services/: CMakeLists.txt
jsonbus/services/echo/: CMakeLists.txt  echo.cpp  echo.h
jsonbus/test/: CMakeLists.txt  main.cpp
jsonbus_router/: CMakeLists.txt  main.cpp  router.cpp  router.h
jsonbusd/: CMakeLists.txt  main.cpp  masterservice.cpp  masterservice.h
master/: CMakeLists.txt  main.cpp  master.cpp  master.h  masterservice.h
nodebus/: BCON.md  CMakeLists.txt
nodebus/bundle/: bundle.cpp  bundle.h  bundleactivator.cpp  bundleactivator.h  bundlecontext.cpp  bundlecontext.h  bundlemanifest.h
nodebus/bundles/: CMakeLists.txt
nodebus/bundles/helloworld/: CMakeLists.txt  helloimpl.cpp  (+4 more)
nodebus/container/: CMakeLists.txt  container.cpp  container.h
nodebus/core/: CMakeLists.txt  application.cpp  application.h  bconparser.cpp  bconparser.h  bconserializer.cpp  bconserializer.h  bsonparser.cpp  bsonparser.h  bsonserializer.cpp  bsonserializer.h  channel.cpp  channel.h  cliarguments.cpp  cliarguments.h  common.h  csonparser.cpp  csonparser.h  csonserializer.cpp  csonserializer.h  datastream.cpp  datastream.h  exception.cpp  exception.h  filechannel.cpp  filechannel.h  global.h  iochannel.cpp  iochannel.h  jsonparser.cpp  jsonparser.h  jsonparsertask.cpp  jsonparsertask.h  jsonserializer.cpp  jsonserializer.h  logger.cpp  logger.h  parser.cpp  parser.h  peer.cpp  (+34 more)
nodebus/core/idlparser/: CMakeLists.txt  constants.h  driver.cpp  driver.h  globals.h  ltype.cpp  ltype.h  node.h  nodeintf.h  nodelist.h  nodemap.h  nodemodule.h  nodeparams.h  noderoot.h  nodevariant.h  parser.cpp  parser.y  routines.h  scanner.cpp  scanner.h  scanner.l
nodebus/core/jsonparser/: CMakeLists.txt  driver.cpp  driver.h  exception.h  globals.h  parser.cpp  parser.y  routines.h  scanner.cpp  scanner.h  scanner.l
nodebus/idlc/: CMakeLists.txt  idlc.cpp  idlc.h
nodebus/master/: CMakeLists.txt  bundlemanager.cpp  bundlemanager.h  master.cpp  master.h
nodebus/nio/: CMakeLists.txt  channel.cpp  channel.h  iochannel.cpp  iochannel.h  peer.cpp  peer.h  peeradmin.cpp  peeradmin.h  selectionkey.cpp  selectionkey.h  selector.cpp  selector.h  serversocketchannel.cpp  serversocketchannel.h  socketchannel.cpp  socketchannel.h  sslcontext.cpp  sslcontext.h  ssliochannel.cpp  ssliochannel.h  sslserversocketchannel.cpp  sslserversocketchannel.h  sslsocketchannel.cpp  sslsocketchannel.h  streamchannel.cpp  streamchannel.h
nodebus/osgi/: CMakeLists.txt  bundle.cpp  bundle.h  bundleactivator.cpp  bundleactivator.h  bundlecontext.cpp  bundlecontext.h  bundlemanifest.h
nodebus/proxy/: CMakeLists.txt  httppeer.cpp  httppeer.h  proxy.cpp  proxy.h  stdpeer.cpp  stdpeer.h
nodebus/service/: CMakeLists.txt
nodebus/test/: CMakeLists.txt  main.cpp
plugins/: CMakeLists.txt
plugins/echo/: echo.cpp  echo.h  main.cpp
plugins/exemple/: CMakeLists.txt  exemple.cpp  exemple.h  main.cpp
router/: CMakeLists.txt  main.cpp  router.cpp  router.h
service/: CMakeLists.txt  main.cpp
services/: CMakeLists.txt
services/echo/: CMakeLists.txt  echo.cpp  echo.h
test/: CMakeLists.txt  main.cpp  test.idl  test2.idl  test_fail.idl  test_ref.bcon  test_ref.bson
test/sub/: test.idl
(+2 files in other folders)
